# ubb_work

Semestrul 1/ASC/EXAMEN_PRACTIC/: problema.asm  problema.lst
Semestrul 1/ASC/teme/: lab3.txt  lab4.txt  lab5.txt  lab6.txt
Semestrul 1/FP/EXAMEN PRACTIC MARIRE/: fisier.txt  main.py  random_jucatori.txt
Semestrul 1/FP/Lab 13/: main.py  tests.py
Semestrul 1/FP/Lab 7-12/: main.py
Semestrul 1/FP/Lab numere complexe/: adauga_nr_in_lista.py  cautare_numere.py  citiri_si_afisari.py  filtrare_numere.py  lab4.txt  main.py  modifica_elemente_lista.py  operatii_cu_nr_din_lista.py
Semestrul 2/Algoritmica grafurilor/: readme.txt
Semestrul 2/Algoritmica grafurilor/lab 01/: problema_1.cpp  problema_2.cpp
Semestrul 2/Algoritmica grafurilor/lab 02/: fisier_in.txt  fisier_in_graf_orientat.txt  output.txt  problema_1.cpp  problema_2.cpp  problema_3.cpp  problema_4.cpp  problema_5.cpp
Semestrul 2/Algoritmica grafurilor/lab 04/: pb1.cpp
Semestrul 2/Algoritmica grafurilor/lab06/: pb3.cpp
Semestrul 2/Algoritmica grafurilor/practic 2/: main.cpp
Semestrul 2/Algoritmica grafurilor/practic 2 semigrp 2/: main.cpp
Semestrul 2/OOP/lab 01/: main.c
Semestrul 2/OOP/lab 02/: CMakeLists.txt  domain.c  domain.h  main.c  repository.c  repository.h  service.c  service.h  ui.c  ui.h  validator.c  validator.h
Semestrul 2/OOP/lab 03/: domain.c  domain.h  main.c  sort.c  (+9 more)
Semestrul 2/OOP/lab04/: CMakeLists.txt  domain.c  domain.h  main.c  repository.h  sort.c  ui.c  validator.c  validator.h
Semestrul 2/OOP/lab06/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h  validators.cpp  validators.h
Semestrul 2/OOP/lab09/: CMakeLists.txt  UI.cpp  UI.h  domain.cpp  domain.h  file_repository.h  main.cpp  recipe_class.cpp  recipe_class.h  repo.cpp  repo.h  repository.cpp  repository.h  service.cpp  service.h  tests.h  ui.cpp  ui.h  undo.h  undo_act.h  validators.h
Semestrul 2/SDA/lab 03/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
Semestrul 2/SDA/lab 04/: App.cpp  CMakeLists.txt  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
Semestrul 2/SDA/lab01/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
alte_probleme/cloudfight_coding_contest/: level3.cpp
(+399 files in other folders)
