cmake_minimum_required(VERSION 3.27)
project(proiect_tad_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(proiect_tad_3 App.cpp
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h)
