cmake_minimum_required(VERSION 3.27)
project(proiect_tad_4)

set(CMAKE_CXX_STANDARD 17)

add_executable(proiect_tad_4 App.cpp
        Dictionar.cpp
        Dictionar.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h
        IteratorDictionar.cpp
        IteratorDictionar.h)
