cmake_minimum_required(VERSION 3.26)
project(proiect_tad)

set(CMAKE_CXX_STANDARD 23)

add_executable(proiect_tad
        App.cpp
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h)
